pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-limit-connections.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-limit-connections
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/limit-connections: "10"
spec:
  ingressClassName: nginx
  rules:
  - host: whoami.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
